# tensorfact

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy-docs-html.sh
doc/: CMakeLists.txt  Doxyfile.in  main.md  tt.md
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.html
docs-html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs-html/_sources/: index.rst.txt
docs-html/_sources/api/: class_tt_vector.rst.txt  class_view_hierarchy.rst.txt  dir_include.rst.txt  file_include_tt_vector.hpp.rst.txt  file_view_hierarchy.rst.txt  function_tt__vector_8hpp_1a6130c81174fc5476cbf5a03c9e5afcbb.rst.txt  program_listing_file_include_tt_vector.hpp.rst.txt  unabridged_api.rst.txt  unabridged_orphan.rst.txt
docs-html/api/: class_tt_vector.html  class_view_hierarchy.html  dir_include.html  file_include_tt_vector.hpp.html  file_view_hierarchy.html  function_tt__vector_8hpp_1a6130c81174fc5476cbf5a03c9e5afcbb.html  library_root.html  program_listing_file_include_tt_vector.hpp.html  unabridged_api.html  unabridged_orphan.html
include/: TensorFact_Array.hpp  TensorFact_CpTensor.hpp  TensorFact_TtTensor.hpp  truncated_svd.hpp  tt_vector.hpp
include/tensorfact/: array.hpp  cp_tensor.hpp  tt_svd.hpp  tt_tensor.hpp
include/tt/: vector.hpp
src/: CMakeLists.txt  TensorFact_Array.cpp  TensorFact_CpTensor.cpp  TensorFact_TtTensor.cpp  array.cpp  cp_tensor.cpp  svd.cpp  svd.hpp  thin_lq.cpp  thin_lq.hpp  thin_rq.cpp  thin_rq.hpp  truncated_svd.cpp  truncated_svd.hpp  tt_svd.cpp  tt_tensor.cpp  tt_vector.cpp  utils.cpp  utils.hpp  vector.cpp
test/: CMakeLists.txt  TensorFact_Array_Test.cpp  TensorFact_CpTensor_Test.cpp  TensorFact_TtTensor_Test.cpp  array_test.cpp  cp_tensor_test.cpp  svd_test.cpp  thin_lq_test.cpp  thin_rq_test.cpp  truncated_svd_test.cpp  tt_svd_test.cpp  tt_tensor_test.cpp  tt_vector_test.cpp  utils_test.cpp  vector_test.cpp
