macro(TensorFact_add_test TESTNAME)
    add_executable(${TESTNAME} ${ARGN})
    target_include_directories(${TESTNAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
    target_link_libraries(${TESTNAME} PRIVATE tensorfact blaspp GTest::GTest)
    add_test(NAME ${TESTNAME} COMMAND ${TESTNAME})
    set_target_properties(${TESTNAME} PROPERTIES FOLDER test)
endmacro()

TensorFact_add_test(utils_test utils_test.cpp)
TensorFact_add_test(tensorfact_array_test TensorFact_Array_Test.cpp)
TensorFact_add_test(tensorfact_cptensor_test TensorFact_CpTensor_Test.cpp)
TensorFact_add_test(tensorfact_tttensor_test TensorFact_TtTensor_Test.cpp)
